# blinky_osdp

./: CMakeLists.txt  prj.conf
boards/: nrf52840dk_nrf52840.overlay
src/: main.c
